--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1423,6 +1423,15 @@ body .mCSB_scrollTools {
       font-size: 0;
       position: absolute;
       background: #f4f6f9; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-disabled {
+        filter: alpha(opacity=60);
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+        -webkit-opacity: 0.6;
+        -khtml-opacity: 0.6;
+        -moz-opacity: 0.6;
+        -ms-opacity: 0.6;
+        -o-opacity: 0.6;
+        opacity: 0.6; }
       .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev {
         right: 50px;
         left: auto; }
@@ -1469,6 +1478,85 @@ body .mCSB_scrollTools {
       cursor: pointer; }
       .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-slide.slick-current {
         border-color: #82c14f; }
+    .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow {
+      top: 50%;
+      margin-top: -10px;
+      bottom: auto;
+      color: #252525;
+      border: 1px solid #000000;
+      -webkit-transform: translate(0);
+      -khtml-transform: translate(0);
+      -moz-transform: translate(0);
+      -ms-transform: translate(0);
+      -o-transform: translate(0);
+      transform: translate(0);
+      filter: alpha(opacity=0);
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      -webkit-opacity: 0;
+      -khtml-opacity: 0;
+      -moz-opacity: 0;
+      -ms-opacity: 0;
+      -o-opacity: 0;
+      opacity: 0;
+      position: absolute;
+      font-size: 0;
+      background: #f4f6f9;
+      width: 20px;
+      height: 20px;
+      z-index: 1;
+      text-align: center;
+      padding: 0;
+      line-height: 18px; }
+      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-prev {
+        left: 18px; }
+        .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-prev:before {
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal;
+          line-height: 16px; }
+      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-next {
+        right: 15px;
+        left: auto; }
+        .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-next:before {
+          font-family: FontAwesome;
+          content: "";
+          font-style: normal;
+          font-weight: normal; }
+      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow:before {
+        color: #252525;
+        font-size: 16px;
+        filter: alpha(opacity=100);
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+        -webkit-opacity: 1;
+        -khtml-opacity: 1;
+        -moz-opacity: 1;
+        -ms-opacity: 1;
+        -o-opacity: 1;
+        opacity: 1; }
+      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow:hover, .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow:focus {
+        color: #82c14f;
+        border-color: #82c14f; }
+        .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow:focus:before {
+          color: #82c14f; }
+    .woocommerce .product-detail-thumbarea .single-product-main-thumbnails:hover .slick-arrow {
+      filter: alpha(opacity=100);
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+      -webkit-opacity: 1;
+      -khtml-opacity: 1;
+      -moz-opacity: 1;
+      -ms-opacity: 1;
+      -o-opacity: 1;
+      opacity: 1; }
+      .woocommerce .product-detail-thumbarea .single-product-main-thumbnails:hover .slick-arrow.slick-disabled {
+        filter: alpha(opacity=60);
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+        -webkit-opacity: 0.6;
+        -khtml-opacity: 0.6;
+        -moz-opacity: 0.6;
+        -ms-opacity: 0.6;
+        -o-opacity: 0.6;
+        opacity: 0.6; }
   .woocommerce .product-detail-thumbarea.slick-carousel {
     position: relative;
     padding-left: 130px; }
@@ -1487,34 +1575,9 @@ body .mCSB_scrollTools {
       .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow {
         left: 50%;
         margin-left: -10px;
-        right: auto;
-        color: #252525;
-        border: 1px solid #000000;
-        -webkit-transform: translate(0);
-        -khtml-transform: translate(0);
-        -moz-transform: translate(0);
-        -ms-transform: translate(0);
-        -o-transform: translate(0);
-        transform: translate(0);
-        filter: alpha(opacity=0);
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-        -webkit-opacity: 0;
-        -khtml-opacity: 0;
-        -moz-opacity: 0;
-        -ms-opacity: 0;
-        -o-opacity: 0;
-        opacity: 0;
-        position: absolute;
-        font-size: 0;
-        background: #f4f6f9;
-        width: 20px;
-        height: 20px;
-        z-index: 1;
-        text-align: center;
-        padding: 0;
-        line-height: 18px; }
+        right: auto; }
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev {
-          top: 15px; }
+          top: 24px; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev:before {
             font-family: FontAwesome;
             content: "";
@@ -1529,22 +1592,6 @@ body .mCSB_scrollTools {
             content: "";
             font-style: normal;
             font-weight: normal; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:before {
-          color: #252525;
-          font-size: 16px;
-          filter: alpha(opacity=100);
-          -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-          -webkit-opacity: 1;
-          -khtml-opacity: 1;
-          -moz-opacity: 1;
-          -ms-opacity: 1;
-          -o-opacity: 1;
-          opacity: 1; }
-        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:hover, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:focus {
-          color: #82c14f;
-          border-color: #82c14f; }
-          .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow:focus:before {
-            color: #82c14f; }
       .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails:hover .slick-arrow {
         filter: alpha(opacity=100);
         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -1554,6 +1601,15 @@ body .mCSB_scrollTools {
         -ms-opacity: 1;
         -o-opacity: 1;
         opacity: 1; }
+        .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails:hover .slick-arrow.slick-disabled {
+          filter: alpha(opacity=60);
+          -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+          -webkit-opacity: 0.6;
+          -khtml-opacity: 0.6;
+          -moz-opacity: 0.6;
+          -ms-opacity: 0.6;
+          -o-opacity: 0.6;
+          opacity: 0.6; }
 
 .woocommerce-page div.product.wc-single-product .quantity-group span,
 .woocommerce div.product.wc-single-product .quantity-group span {
