--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1478,6 +1478,9 @@ body{
         font-size: 0;
         position: absolute;
         background: $qty_bg;
+        &.slick-disabled{
+          @include opacity(0.6);
+        }
         &.slick-prev{
           right: 50px;
           left: auto;
@@ -1530,6 +1533,58 @@ body{
 	    		border-color:$primary-color;
 	    	}
 	    }
+      .slick-arrow{
+        top: 50%;
+        margin-top: -10px;
+        bottom: auto;
+        color: $title-text;
+        border:1px solid $black;
+        @include transform(translate(0));
+        @include opacity(0);
+        position: absolute;
+        font-size: 0;
+        background: $qty_bg;
+        width: 20px;
+        height: 20px;
+        z-index: 1;
+        text-align: center;
+        padding: 0;
+        line-height: 18px;
+        &.slick-prev{
+          left:18px;
+          &:before{
+            @include FontAwesome('\f104');
+            line-height: 16px;
+          }
+        }
+        &.slick-next{
+          right:15px;
+          left:auto;
+          &:before{
+            @include FontAwesome('\f105');
+          }
+        }
+        &:before{
+          color: $title-text;
+          font-size: 16px;
+          @include opacity(1);
+        }
+        &:hover,&:focus{
+          color: $primary-color;
+          border-color: $primary-color;
+          &:before{
+            color: $primary-color;
+          }
+        }
+      }
+      &:hover{
+        .slick-arrow{
+          @include opacity(1);
+          &.slick-disabled{
+            @include opacity(0.6);
+          }
+        }
+      }
 		}
 
     &.slick-carousel{
@@ -1553,21 +1608,8 @@ body{
           left: 50%;
           margin-left: -10px;
           right: auto;
-          color: $title-text;
-          border:1px solid $black;
-          @include transform(translate(0));
-          @include opacity(0);
-          position: absolute;
-          font-size: 0;
-          background: $qty_bg;
-          width: 20px;
-          height: 20px;
-          z-index: 1;
-          text-align: center;
-          padding: 0;
-          line-height: 18px;
           &.slick-prev{
-            top:15px;
+            top:24px;
             &:before{
               @include FontAwesome('\f106');
               line-height: 16px;
@@ -1580,22 +1622,13 @@ body{
               @include FontAwesome('\f107');
             }
           }
-          &:before{
-            color: $title-text;
-            font-size: 16px;
-            @include opacity(1);
-          }
-          &:hover,&:focus{
-            color: $primary-color;
-            border-color: $primary-color;
-            &:before{
-              color: $primary-color;
-            }
-          }
         }
         &:hover{
           .slick-arrow{
             @include opacity(1);
+            &.slick-disabled{
+              @include opacity(0.6);
+            }
           }
         }
       }
