--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1471,12 +1471,11 @@ body .mCSB_scrollTools {
 /** =========================
     6. Product Detail
 *** =========================*/
-.product-detail-inner {
-  margin-bottom: 50px; }
-
 .woocommerce .easyzoom-flyout img {
   max-width: none !important;
   width: auto !important; }
+.woocommerce .product-detail-inner {
+  margin-bottom: 50px; }
 .woocommerce div.product .woocommerce-product-rating {
   margin: 0;
   position: absolute;
@@ -1494,6 +1493,8 @@ body .mCSB_scrollTools {
   padding: 0 90px 0 0;
   color: #252525;
   text-transform: capitalize; }
+.woocommerce div.product .stock {
+  margin-bottom: 10px; }
 .woocommerce div.product.wc-single-product .entry-summary p.price {
   font-size: 22px;
   margin: 0 0 20px;
@@ -1508,16 +1509,9 @@ body .mCSB_scrollTools {
   font-size: 18px;
   margin-bottom: 15px;
   margin-right: 10px; }
-.woocommerce div.product p.stock {
-  background: #252525;
-  color: #FFFFFF;
-  display: inline-block;
-  font-size: 0.92em;
-  line-height: normal;
-  margin-bottom: 15px;
-  padding: 3px 5px; }
-.woocommerce div.product p.out-of-stock {
-  background: red; }
+.woocommerce div.product.wc-single-product.outofstock .functional-buttons-product {
+  float: none;
+  margin-bottom: 20px; }
 .woocommerce #content div.product div.images,
 .woocommerce #content div.product div.summary {
   float: none;
@@ -1834,36 +1828,37 @@ body .mCSB_scrollTools {
     border: medium none;
     padding: 5px 0 15px;
     vertical-align: top; }
-.woocommerce-page div.product form.cart .group_table,
-.woocommerce div.product form.cart .group_table {
-  margin-bottom: 30px; }
-  .woocommerce-page div.product form.cart .group_table td,
-  .woocommerce div.product form.cart .group_table td {
-    padding-bottom: 20px;
-    vertical-align: middle; }
-  .woocommerce-page div.product form.cart .group_table div.quantity-group,
-  .woocommerce div.product form.cart .group_table div.quantity-group {
-    margin: 0; }
-  .woocommerce-page div.product form.cart .group_table .quantity-group span,
-  .woocommerce div.product form.cart .group_table .quantity-group span {
-    display: none; }
-  .woocommerce-page div.product form.cart .group_table .label,
-  .woocommerce div.product form.cart .group_table .label {
-    display: table-cell;
-    font-size: 100%;
-    font-weight: normal;
-    white-space: inherit; }
-  .woocommerce-page div.product form.cart .group_table label,
-  .woocommerce div.product form.cart .group_table label {
-    display: inline;
-    font-weight: normal;
-    margin: 0; }
+.woocommerce-page div.product form.cart .group_table td,
+.woocommerce div.product form.cart .group_table td {
+  padding-bottom: 20px;
+  vertical-align: middle; }
+.woocommerce-page div.product form.cart .group_table .price,
+.woocommerce div.product form.cart .group_table .price {
+  display: table-cell; }
+.woocommerce-page div.product form.cart .group_table div.quantity-group,
+.woocommerce div.product form.cart .group_table div.quantity-group {
+  margin: 0; }
+.woocommerce-page div.product form.cart .group_table .quantity-group span,
+.woocommerce div.product form.cart .group_table .quantity-group span {
+  display: none; }
+.woocommerce-page div.product form.cart .group_table .label,
+.woocommerce div.product form.cart .group_table .label {
+  display: table-cell;
+  font-size: 100%;
+  font-weight: normal;
+  white-space: inherit; }
+.woocommerce-page div.product form.cart .group_table label,
+.woocommerce div.product form.cart .group_table label {
+  display: inline;
+  font-weight: normal;
+  margin: 0; }
 .woocommerce-page div.product .entry-share-box,
 .woocommerce div.product .entry-share-box {
   padding: 18px 0;
   color: #252525;
   border-bottom: 1px solid #e9e9e9;
-  border-top: 1px solid #e9e9e9; }
+  border-top: 1px solid #e9e9e9;
+  clear: both; }
 .woocommerce-page div.product .product_meta,
 .woocommerce div.product .product_meta {
   clear: both;
