--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1479,171 +1479,173 @@ body{
 /** =========================
     6. Product Detail
 *** =========================*/
-.product-detail-inner {
-    margin-bottom: 50px;
-}
-.woocommerce{
-	.easyzoom-flyout{
-		img{
-			max-width: none !important;
-    		width: auto !important;
-		}
-	}
-	div.product{
-		.woocommerce-product-rating{
-			margin:0;
-		    position: absolute;
-		    right:15px;
-		    top:0;
-		    float:right;
-		    .woocommerce-review-link{
-		    	display: none;
-		    }
-		}
-		.product_title{
-			font-size: 24px;
-		    font-family:$font-stack;
-		    font-weight: normal;
-		    line-height: normal;
-		    margin: 0 0 20px;
-		    padding: 0 90px 0 0;
-		    color: $title-text;
-		    text-transform: capitalize;
-		}
-		&.wc-single-product{
-			.entry-summary{
-				p.price{
-					font-size: 22px;
-				    margin:0 0 20px;
-				    color: $main-text;
-				    letter-spacing: 0.2em;
-				    font-family:$heading-font;
-				    font-weight:700;
-				    text-align: left;
-				}
-				span.price{
-					color: $title-text;
-				    display: inline-block;
-				    font-size: 18px;
-				    margin-bottom: 15px;
-				    margin-right: 10px;
-				}
-			}
-		}
-		p.stock{
-			background: $title-text;
-		    color: $white;
-		    display: inline-block;
-		    font-size: 0.92em;
-		    line-height: normal;
-		    margin-bottom: 15px;
-		    padding: 3px 5px;
-		}
-		p.out-of-stock{
-			background: red;
-		}
-	}
-	#content{
-		div.product{
-			div.images,
-			div.summary{
-				float: none;
-	    		width: 100%;
-			}
-		}
-	}
-	.product-detail-thumbarea{
-      position: relative;
-      .kt_new{
-        left: auto;
-        right: 19px;
 
-        +.onsale{
-          top: 50px;
+.woocommerce{
+  .easyzoom-flyout{
+    img{
+      max-width: none !important;
+      width: auto !important;
+    }
+  }
+  .product-detail-inner {
+    margin-bottom: 50px;
+  }
+  div.product{
+    .woocommerce-product-rating{
+      margin:0;
+      position: absolute;
+      right:15px;
+      top:0;
+      float:right;
+      .woocommerce-review-link{
+          display: none;
+      }
+    }
+
+    .product_title{
+      font-size: 24px;
+      font-family:$font-stack;
+      font-weight: normal;
+      line-height: normal;
+      margin: 0 0 20px;
+      padding: 0 90px 0 0;
+      color: $title-text;
+      text-transform: capitalize;
+    }
+    .stock{
+      margin-bottom: 10px;
+    }
+    &.wc-single-product{
+      .entry-summary{
+        p.price{
+          font-size: 22px;
+          margin:0 0 20px;
+          color: $main-text;
+          letter-spacing: 0.2em;
+          font-family:$heading-font;
+          font-weight:700;
+          text-align: left;
+        }
+        span.price{
+          color: $title-text;
+          display: inline-block;
+          font-size: 18px;
+          margin-bottom: 15px;
+          margin-right: 10px;
         }
       }
 
-		.single-product-main-images{
-          margin-bottom: 30px;
-          .slick-list{
-            border: 1px solid $border-third-color;
+      &.outofstock{
+        .functional-buttons-product{
+          float: none;
+          margin-bottom: 20px;
+        }
+      }
+
+    }
+
+  }
+  #content{
+      div.product{
+          div.images,
+          div.summary{
+              float: none;
+              width: 100%;
           }
-          .slick-arrow{
-            @include transform(translate(0));
-            color: $title-text;
-            border:1px solid $border-third-color;
-            bottom: 10px;
-            top:auto;
-            width: 30px;
-            height: 30px;
-            z-index: 10;
-            font-size: 0;
+      }
+  }
+  .product-detail-thumbarea{
+    position: relative;
+    .kt_new{
+      left: auto;
+      right: 19px;
+
+      +.onsale{
+        top: 50px;
+      }
+    }
+
+    .single-product-main-images{
+      margin-bottom: 30px;
+      .slick-list{
+        border: 1px solid $border-third-color;
+      }
+      .slick-arrow{
+        @include transform(translate(0));
+        color: $title-text;
+        border:1px solid $border-third-color;
+        bottom: 10px;
+        top:auto;
+        width: 30px;
+        height: 30px;
+        z-index: 10;
+        font-size: 0;
+        position: absolute;
+        background: $white;
+
+        &.slick-disabled{
+          @include opacity(0.3);
+          cursor: default;
+        }
+
+        &.slick-prev,
+        &.slick-next{
+          &:before{
+            font-size: 18px;
+            line-height: 28px;
+            color: $social-color;
+          }
+        }
+
+        &.slick-prev{
+          right: 50px;
+          &:before{
+            @include FontAwesome('\f104');
+          }
+          &:after{
+            width: 11px;
+            content: "";
+            height: 1px;
+            background: $border-third-color;
             position: absolute;
-            background: $white;
+            left: 100%;
+            top: 15px;
+          }
+        }
+        &.slick-next{
+          right: 10px;
+          &:before{
+            @include FontAwesome('\f105');
+          }
+        }
 
-            &.slick-disabled{
-              @include opacity(0.3);
-              cursor: default;
-            }
-
-            &.slick-prev,
-            &.slick-next{
-              &:before{
-                font-size: 18px;
-                line-height: 28px;
-                color: $social-color;
-              }
-            }
-
-            &.slick-prev{
-              right: 50px;
-              &:before{
-                @include FontAwesome('\f104');
-              }
-              &:after{
-                width: 11px;
-                content: "";
-                height: 1px;
-                background: $border-third-color;
-                position: absolute;
-                left: 100%;
-                top: 15px;
-              }
-            }
-            &.slick-next{
-              right: 10px;
-              &:before{
-                @include FontAwesome('\f105');
-              }
-            }
-
-            &:not(.slick-disabled){
-              cursor: pointer;
-              &:hover,
-              &:focus{
-                color: $primary-color;
-                border-color: $primary-color;
-                &:before{
-                  color: $primary-color;
-                }
-              }
+        &:not(.slick-disabled){
+          cursor: pointer;
+          &:hover,
+          &:focus{
+            color: $primary-color;
+            border-color: $primary-color;
+            &:before{
+              color: $primary-color;
             }
           }
-		}
-		.single-product-main-thumbnails{
-			margin-bottom: 30px;
-			margin-left: -14px;
-	    margin-right: -14px;
-	    width: auto;
-	    .slick-slide{
-	    	margin: 0 14px;
+        }
+      }
+    }
+    .single-product-main-thumbnails{
+      margin-bottom: 30px;
+      margin-left: -14px;
+      margin-right: -14px;
+      width: auto;
+      .slick-slide{
+        margin: 0 14px;
         border:1px solid $border-color;
         display: inline-block;
         cursor: pointer;
-	    	&.slick-current{
-	    		border-color:$primary-color;
-	    	}
-	    }
+        &.slick-current{
+            border-color:$primary-color;
+        }
+      }
       .slick-arrow{
         top: 50%;
         margin-top: -10px;
@@ -1696,7 +1698,7 @@ body{
           }
         }
       }
-		}
+    }
 
     &.slick-carousel{
       position: relative;
@@ -1744,7 +1746,7 @@ body{
         }
       }
     }
-	}
+  }
 }
 .woocommerce-page,
 .woocommerce{
@@ -1787,69 +1789,73 @@ body{
 			}
 		}
 		form.cart{
-            .variation_form_section,
-			.variations{
-                margin-bottom: 30px;
-                padding-bottom: 20px;
-			    width: 100%;
-			    border-bottom:1px solid $border-second-color;
-                .variations-table,
-                td.variations-label{
-                  padding: 12px 12px 15px 0;
-                  vertical-align: top;
-                  label{
-                    font-weight: normal;
-                    margin: 0;
-                    padding: 0;
-                    color:$title-text;
-                    min-width: 100px;
-                    display: inline-block;
-                  }
 
-				}
-                .variations-table{
-                  td{
-                    padding: 5px 0;
-                  }
+          .variation_form_section,
+          .variations{
+              margin-bottom: 30px;
+              padding-bottom: 20px;
+              width: 100%;
+              border-bottom:1px solid $border-second-color;
+              .variations-table,
+              td.variations-label{
+                padding: 12px 12px 15px 0;
+                vertical-align: top;
+                label{
+                  font-weight: normal;
+                  margin: 0;
+                  padding: 0;
+                  color:$title-text;
+                  min-width: 100px;
+                  display: inline-block;
                 }
-				td.variations-value{
-					border: medium none;
-				    padding: 5px 0 15px;
-				    vertical-align: top;
-				}
-			}
-			.group_table{
-				margin-bottom: 30px;
-				td{
-					padding-bottom: 20px;
-    				vertical-align: middle;
-				}
-				div.quantity-group{
-					margin: 0;
-				}
-				.quantity-group{
-					span{
-						display: none;
-					}
-				}
-				.label{
-					display: table-cell;
-				    font-size: 100%;
-				    font-weight: normal;
-				    white-space: inherit;
-				}
-				label{
-					display: inline;
-				    font-weight: normal;
-				    margin: 0;
-				}
-			}
+
+              }
+              .variations-table{
+                td{
+                  padding: 5px 0;
+                }
+              }
+              td.variations-value{
+                  border: medium none;
+                  padding: 5px 0 15px;
+                  vertical-align: top;
+              }
+          }
+          .group_table{
+            td{
+                padding-bottom: 20px;
+                vertical-align: middle;
+            }
+            .price{
+              display: table-cell;
+            }
+            div.quantity-group{
+                margin: 0;
+            }
+            .quantity-group{
+                span{
+                    display: none;
+                }
+            }
+            .label{
+                display: table-cell;
+                font-size: 100%;
+                font-weight: normal;
+                white-space: inherit;
+            }
+            label{
+                display: inline;
+                font-weight: normal;
+                margin: 0;
+            }
+          }
 		}
 		.entry-share-box{
-			padding:18px 0;
-		    color:$title-text;
-		    border-bottom:1px solid $border-second-color;
-		    border-top:1px solid $border-second-color;
+          padding:18px 0;
+          color:$title-text;
+          border-bottom:1px solid $border-second-color;
+          border-top:1px solid $border-second-color;
+          clear: both;
 		}
 		.product_meta{
           clear: both;
